# gocv

./: .gitignore  README.md  UseCudaOnWindows.md  aruco.h  assert.go  calib3d.cpp  calib3d.go  calib3d.h  calib3d_test.go  cgo.go  core.cpp  core.go  core.h  dnn.go  features2d.h  imgcodecs.h  imgproc.cpp  imgproc.go  imgproc.h  photo.h  std.h  video.h
contrib/: cgo.go
cuda/: bgsegm.h  cgo.go  imgproc.h
cvglue/: CMakeLists.txt  calib3d.h  core.h  imgcodecs.h
cvglue/contrib/: CMakeLists.txt  aruco.h  xphoto.h
cvglue/cuda/: CMakeLists.txt
cvglue/gocv/: CMakeLists.txt  imgproc.cpp  std.cpp
